# RustProj

./: LICENSE.md  README.md
projects/cal/: Cargo.toml
projects/cal/src/: main.rs
projects/calc/src/: main.rs
projects/calendarpoj/: .gitignore
projects/calendarpoj/src/: main.rs
projects/calenderpoj/: Cargo.toml
projects/calenderpoj/src/: main.rs
projects/guessing_game/: Cargo.toml
projects/hello_world/: main
projects/isprime/: Cargo.toml
projects/isprime/src/: main.rs
projects/primenum/: Cargo.toml
projects/primenum/src/: main.rs
projects/todo/: Cargo.toml
projects/todo/src/: main.rs
projects/variables/: Cargo.toml
rust2/file_info/: Cargo.toml
rust2/file_info/src/: main.rs
rust2/grains/src/: main.rs
rust2/guessing_game/: Cargo.toml
rust2/guessing_game/src/: main.rs
rust2/ls/: Cargo.toml
rust2/ls/src/: main.rs
rust2/navfs/: Cargo.toml  README.md
rust2/navfs/src/: lib.rs  ls.rs  navfs.rs
rust2/number_checker/: Cargo.toml
rust2/number_checker/src/: main.rs
rust2/rust-shorcuts/: Cargo.toml  README.md
rust2/rust-shortcuts/: Cargo.toml
rust2/rust-shortcuts/src/: lib.rs
rust2/wc-simple/: Cargo.toml
rust2/wc-simple/src/: main.rs
