[package]
name = "navfs"
version = "0.1.0"
edition = "2021"
description = "navfs: navigate and do things to your filesystem!"
readme = "README.md"
license = "MIT"
repository = "navigate and do things to your filesystem!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
