[package]
name = "rust-shorcuts"
version = "0.1.1"
edition = "2021"
description = "rust-shortcuts, shortcuts to tidy up your rust code"
readme = "README.md"
license = "MIT"
repository = "https://github.com/IvaNG515/RustProj/tree/main/rust2/rust-shorcuts"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
